--- a/index.html
+++ b/index.html
@@ -248,35 +248,35 @@
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
-          <div class="feature-item">
-            <div class="feature-icon float-right">
-              <i class="lni lni-cog"></i>
-            </div>
-            <div class="feature-info float-right">
-              <h4>إدارة حسابات</h4>
-              <p>التواصل الإجتماعي</p>
-            </div>
+          <div class="feature-item featured-border3"">
+            <div class=" feature-icon float-right">
+            <i class="lni lni-cog"></i>
           </div>
-          <!-- End Fetatures -->
-        </div>
-        <!-- End Col -->
-        <!-- Start Col -->
-        <div class="col-lg-6 col-md-6 col-xs-12 p-0">
-          <!-- Start Fetatures -->
-          <div class="feature-item">
-            <div class="feature-icon float-right">
-              <i class="lni lni-target"></i>
-            </div>
-            <div class="feature-info float-right">
-              <h4>الاستراتيجيات والخطط</h4>
-              <p>التسويقية</p>
-            </div>
+          <div class="feature-info float-right">
+            <h4>إدارة حسابات</h4>
+            <p>التواصل الإجتماعي</p>
           </div>
-          <!-- End Fetatures -->
         </div>
-        <!-- End Col -->
+        <!-- End Fetatures -->
       </div>
-      <!-- End Row -->
+      <!-- End Col -->
+      <!-- Start Col -->
+      <div class="col-lg-6 col-md-6 col-xs-12 p-0">
+        <!-- Start Fetatures -->
+        <div class="feature-item">
+          <div class="feature-icon float-right">
+            <i class="lni lni-target"></i>
+          </div>
+          <div class="feature-info float-right">
+            <h4>الاستراتيجيات والخطط</h4>
+            <p>التسويقية</p>
+          </div>
+        </div>
+        <!-- End Fetatures -->
+      </div>
+      <!-- End Col -->
+    </div>
+    <!-- End Row -->
     </div>
   </section>
   <!-- Cool Fetatures Section End -->
