--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
           </div>
         </div>
 
-        <div class="col-lg-6 col-md-12 col-xs-12 p-0 pie-img">
-          <div class="intro-img">
+        <!-- <div class="col-lg-6 col-md-12 col-xs-12 p-0 pie-img">
+          <div class="intro-img"> -->
             <!-- <img src="img/undraw_Marketing.svg" alt=""> -->
-            <svg width="500" height="500" viewBox="0 0 591 377" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <!-- <svg width="500" height="500" viewBox="0 0 591 377" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g id="undraw_Marketing 1">
                 <path id="Vector"
                   d="M433.372 338.954H182.42C181.126 338.953 179.886 338.43 178.971 337.5C178.056 336.57 177.541 335.309 177.54 333.994V69.811C177.541 68.496 178.056 67.2352 178.971 66.3053C179.886 65.3754 181.126 64.8524 182.42 64.8509H433.372C434.666 64.8524 435.906 65.3754 436.821 66.3053C437.736 67.2352 438.25 68.496 438.252 69.811V333.994C438.25 335.309 437.736 336.57 436.821 337.5C435.906 338.43 434.666 338.953 433.372 338.954ZM182.42 66.5803C181.577 66.5813 180.769 66.9219 180.173 67.5276C179.577 68.1333 179.242 68.9545 179.241 69.811V333.994C179.242 334.851 179.577 335.672 180.173 336.277C180.769 336.883 181.577 337.224 182.42 337.225H433.372C434.214 337.224 435.022 336.883 435.618 336.277C436.214 335.672 436.549 334.851 436.55 333.994V69.811C436.549 68.9545 436.214 68.1333 435.618 67.5276C435.022 66.9219 434.214 66.5813 433.372 66.5803H182.42Z"
@@ -117,11 +117,11 @@
                     fill="#E6E6E6" />
                 </g>
               </g>
-            </svg>
+            </svg> -->
 
 
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
 
       </div>
     </div>
