--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <i class="lni lni-travel"></i>
             </div>
             <div class="feature-info float-right">
-              <h4>تخطيط تنفيذ</h4>
+              <h4>تخطيط وتنفيذ</h4>
               <p>الحملات الإعلانية</p>
             </div>
           </div>
